@@ -12,6 +12,10 @@ CruiseControlTagSupport
 ----------------------
 * minor change for compatibility with jdk 1.3 - Patch by Thai Thanh Ha
 
+Email Publishers (LinkEmailPublisher and HTMLEmailPublisher)
+----------------------
+* failure subelements now contain an optional attribute "reportWhenFixed" to specify if the email address should be sent mail when the build is fixed.
+
 Project
 ----------------------
 * add descriptive toString so JMX view of CruiseControlManager shows status for each project - Patch by Matt Albrecht
